# pasci-api

./: .gitignore  README.md  pyproject.toml
app/: main.py  schema.py
app/api/v1/endpoints/: auth.py  items.py  news.py  users.py
app/core/: auth.py  config.py  security.py
app/database/: session.py
app/models/: items.py  news.py  post.py  users.py
app/schemas/: __init__.py  auth.py  items.py  news.py  post.py  users.py
app/services/: imagekit_config.py  user_service.py
app/utils/: preview_text_generator.py
